--- a/Virtual Piano/Virtual Piano/task/src/index.html
+++ b/Virtual Piano/Virtual Piano/task/src/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Virtual Piano</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container">
 <kbd>A</kbd>
 <kbd>S</kbd>
 <kbd>D</kbd>
@@ -12,5 +14,6 @@
 <kbd>G</kbd>
 <kbd>H</kbd>
 <kbd>J</kbd>
+</div>
 </body>
 </html>
